manifest/k8s-onpremise/core/customers/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  customers-v2
spec:
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        app: customers
        version: "v.2"
    spec:
      containers:
      - name:  customers
        image:  aditirvan/istio-sample-app:customers-v2.0
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
