manifest/k8s-onpremise/core/customers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers
spec:
  selector:
    app: customers
  ports:
  - port: 80  
    targetPort: 8080
