manifest/k8s-onpremise/core/customers/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customers
spec:
  hosts:
  - "customers.core.svc.cluster.local"
  http:
  - name: "customers"
    route:
    - destination:
        host: customers.core.svc.cluster.local
        subset: v1
      weight: 90

    - destination:
        host: customers.core.svc.cluster.local
        subset: v2
      weight: 5

    - destination:
        host: customers.core.svc.cluster.local
        subset: v3
      weight: 5
